cropped extra space on right side of logo image; fixed vertical overlapping of main image and about section.

--- a/css/rogue6_project1_styles.css
+++ b/css/rogue6_project1_styles.css
@@ -103,17 +103,15 @@ main
 }
 
 #main_home_image
-{   
+{
     position: relative;
 	margin-top: -20px;
     padding: 0px;
     width: 100%;
-    height: 620px;
-	
 }
 
 #bg-gif{
-    position:absolute;
+    position: absolute;
     padding: 0px;
     margin-top: 0px;
     width: 100%;
@@ -121,7 +119,7 @@ main
 }
 
 #bg-overlay{
-     position:absolute;
+    position: relative;
     margin-top: 0px;
     padding: 0px;
     width: 100%;
